--- a/mails/order-placed.ejs
+++ b/mails/order-placed.ejs
@@ -6,9 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>order place success.</h1>
-    <h3>userId : <%= userId %></h3>
-    <h3>orderId : <%= id %></h3>
-    <h3>courseId : <%= courseId %></h3>
+    <div>
+        <h1>order place success.</h1>
+        <h3>userId : <%= userId %></h3>
+        <h3>orderId : <%= id %></h3>
+        <h3>courseId : <%= courseId %></h3>
+    </div>
 </body>
 </html>
